--- a/article.html
+++ b/article.html
@@ -43,7 +43,9 @@ header {
     <h1>Wolf Game</h1>
   </header>
 
-  
+ <table border="0" width="100%" height="100%">
+ <tr>
+ <td width="50%"> 
 <article>
   <h1>London</h1>
   <svg width="860" height="425"></svg>
@@ -57,7 +59,7 @@ var svg = d3.select("svg"),
 var color = d3.scaleOrdinal(d3.schemeCategory20);
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }))
+    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(200).strength(2.5))
     .force("charge", d3.forceManyBody())
     .force("center", d3.forceCenter(width / 2, height / 2));
 
@@ -69,14 +71,14 @@ d3.json("miserables.json", function(error, graph) {
     .selectAll("line")
     .data(graph.links)
     .enter().append("line")
-      .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
+      .attr("stroke-width", function(d) { return 2*Math.sqrt(d.value); });
 
   var node = svg.append("g")
       .attr("class", "nodes")
     .selectAll("circle")
     .data(graph.nodes)
     .enter().append("circle")
-      .attr("r", 5)
+      .attr("r", 8)
       .attr("fill", function(d) { return color(d.group); })
       .call(d3.drag()
           .on("start", dragstarted)
@@ -126,7 +128,18 @@ function dragended(d) {
 </script>
 
 </article>
-
+</td>
+<td>
+</br>
+</br>
+</br>
+</br>
+</br>
+<a href="intro1.html" style="text-decoration:none">TOUR ></a>
+</br>
+</td>
+</tr>
+</table>
 <footer>
     <h4>Copyright &copy;Syracuse University</h4>
   </footer>
