--- a/finalintro.html
+++ b/finalintro.html
@@ -39,11 +39,11 @@ header {
     <h1>Wolf Game</h1>
   </header>
   
-<table border="0" width="50%" height="50%">
+<table border="0" width="100%" height="100%">
 <tr>
 <td width="50%">
-
-<svg width="600" height="725"></svg>
+<article>
+<svg width="860" height="725"></svg>
   <script src="http://d3js.org/d3.v4.min.js"></script>
   <script>
 var svg = d3.select("svg"),
@@ -72,13 +72,33 @@ d3.json("misdata5.json", function(error, graph) {
     .selectAll("circle")
     .data(graph.nodes)
     .enter().append("circle")
-      .attr("r", 5)
-      .attr("fill", function(d) { return color(d.group); })
+      .attr("r", function(d) { 
+      if(d.Mainnode ==1)
+      {
+        return 10;
+      }
+
+      else
+      {
+        return 5;
+      }
+
+      })
+      .attr("fill", function(d) { 
+
+      if(d.Mainnode ==1)
+      {
+         return d.color;
+      }
+
+      else
+      {
+     return color(d.group);
+      }})
       .call(d3.drag()
           .on("start", dragstarted)
           .on("drag", dragged)
           .on("end", dragended));
-
   node.append("title")
       .text(function(d) { return d.id; });
 
@@ -120,6 +140,30 @@ function dragended(d) {
 }
 
 </script>
+</article>
+</td>
+<td>
+<h3> Lesson 1: Intro to Networks</h3>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<p>Your friends have friends, who may be strangers to you,
+but together they make up your contact network.</p>
+<a href="intro3.html" style="text-decoration:none">Prev></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Wolfgameintro.html" style="text-decoration:none">Lesson 2></a>
+</br>
 </td>
 </tr>
 </table>
