--- a/intro3.html
+++ b/intro3.html
@@ -166,8 +166,8 @@ function dragended(d) {
 </br>
 </br>
 </br>
-<p>Now here are more friends who are connected to you and
-to each other. This is your immediate contact group.</p>
+<p><font size="4"> Now here are more friends who are connected to you and
+to each other. This is your immediate contact group.</font></p>
 <a href="intro2.html" style="text-decoration:none">Prev></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <a href="finalintro.html" style="text-decoration:none">Next></a>
