--- a/finalintro.html
+++ b/finalintro.html
@@ -159,8 +159,8 @@ function dragended(d) {
 </br>
 </br>
 </br>
-<p>Your friends have friends, who may be strangers to you,
-but together they make up your contact network.</p>
+<p><font size="4"> Your friends have friends, who may be strangers to you,
+but together they make up your contact network.</font></p>
 <a href="intro3.html" style="text-decoration:none">Prev></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Wolfgameintro.html" style="text-decoration:none">Lesson 2></a>
 </br>
