--- a/intro2.html
+++ b/intro2.html
@@ -166,8 +166,8 @@ function dragended(d) {
 </br>
 </br>
 </br>
-<p>And this is you with one friend. The connection
-represents contact between you two.</p>
+<p><font size="4"> And this is you with one friend. The connection
+represents contact between you two.</font></p>
 <a href="intro1.html" style="text-decoration:none">Prev> &nbsp;&nbsp;&nbsp;&nbsp;   </a>
 <a href="intro3.html" style="text-decoration:none">Next></a>
 </br>
