--- a/consent.html
+++ b/consent.html
@@ -6,10 +6,23 @@
     window.location.href = url;
     }
 </script>
+<style type="text/css">
+	input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  padding: 10px;
+}
+</style>
+
 </head>
 <body>
-<center><img src="consentimage.png"/></center>
+            <center><img src="consentimage.png"/></center>
              <center>
+
 
              DEPARTMENT OF ELECTRICAL ENGINEERING AND COMPUTER SCIENCE
 
@@ -17,7 +30,9 @@
 
              <br>  (P) 315-443-2652<br> 
 
-             Network Data Collection Game </center>
+             Network Data Collection Game </center> <br>
+
+  <div style="height:340px;width:100%;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">           
 
 <p>My name is Dr. Sucheta Soundarajan and I am a professor at Department of Electrical Engineering and Computer Science. I am inviting you to participate in a research study. Involvement in the study is voluntary, so you may choose to participate or not. This sheet will explain the study to you and please feel free to ask questions about the research if you have any. I will be happy to explain anything in detail if you wish.</p>
 
@@ -39,12 +54,10 @@ Contact Information:
 
 <p>All of my questions have been answered, I am 18 years of age or older, and I wish to participate in this research study. I have received a copy of this consent form.<p>
 
-By clicking here I agree to participate in this research study. 
 
-
-
-<input type="checkbox" name="agree" value="agrees" id="Agree" onClick="redirect('article.html')"/>
-
+</div>
+<br> 
+<input type="checkbox"  name="agree" value="agrees" id="Agree" onClick="redirect('article.html')"/> &nbsp;&nbsp; By clicking here I agree to participate in this research study.
 
 
 
